# Lnex

./: .gitignore  README.md
Ai-Service/ai_service/: ext.py  main.py  pyproject.toml
Auth-Service/: main.py  pyproject.toml
Auth-Service/auth_service/auth_db/: apps.py
Auth-Service/auth_service/auth_service/: asgi.py  wsgi.py
Auth-Service/auth_service/user_profile/: models.py
Auth_Service/: README.md  pyproject.toml
Auth_Service/auth_service/: manage.py
Auth_Service/auth_service/auth_service/: asgi.py  wsgi.py
Auth_Service/auth_service/conf/ENV/: base.env
Auth_Service/auth_service/conf/docker/: Dockerfile
Auth_Service/auth_service/conf/main/: settings.py
Auth_Service/auth_service/config/main/: settings.py
Auth_Service/auth_service/utils/: permisions.py
Communication-Service/: main.py  pyproject.toml
Communication-Service/communication_service/: manage.py
Learn-Service/: data.html  main.py  pyproject.toml  requirements.txt  type.py
Learn-Service/learn_service/config/docker/: Dockerfile
Learn-Service/learn_service/config/main/: settings.py
Learn-Service/learn_service/courses/: admin.py
Learn-Service/learn_service/home/: urls.py
Learn-Service/learn_service/learn_service/: asgi.py  settings.py  wsgi.py
Learn-Service/learn_service/locale/fr/LC_MESSAGES/: django.mo  django.po
Learn-Service/learn_service/locale/rw/LC_MESSAGES/: django.mo
Learn-Service/learn_service/templates/: ui_base.html
Learn-Service/learn_service/templates/filters/: base.html
Learn-Service/learn_service/templates/side_bars/: base_menu.html
Learn-Service/learn_service/users/: models.py  urls.py
Learn-Service/learn_service/utils/: exceptions.py  helper.py
Learn-Service/learn_service/utils/files/: converter.py
Learn_Service/: file_upload.js  home.html  requirements.txt  testsd.py
Learn_Service/learn_service/: manage.py
Media-Service/: pyproject.toml
Micro-Service/: main.py  pyproject.toml
Payment-Service/: pyproject.toml
Ubuntu_Academy/: testing.py
configs/: .env  docker-compose.yaml
configs/nginx/: nginx.conf
(+67 files in other folders)
